instructions exist on correct z-index

--- a/assets/css/less/instructions.less
+++ b/assets/css/less/instructions.less
@@ -18,7 +18,7 @@
     color: white;
     position: fixed;
     height: 22px;
-    z-index: 1000;
+    z-index: 50;
     white-space: nowrap;
     font-size: 21px;
 
