--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5397,7 +5397,7 @@ html {
   color: white;
   position: fixed;
   height: 22px;
-  z-index: 1000;
+  z-index: 50;
   white-space: nowrap;
   font-size: 21px;
 }
@@ -5512,7 +5512,7 @@ html {
   padding: 10px 0;
   font-size: 1.75em;
   color: #555;
-  z-index: 100;
+  z-index: 10;
   position: relative;
   *zoom: 1;
 }
